// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for 's submitTrackEvent destination action: all fields 1`] = `
Object {
  "data": "Test Event",
  "kind": "Track",
  "leadRefs": Array [
    Object {
      "type": "client-id",
      "value": "user1234",
    },
    Object {
      "type": "client-id",
      "value": "anonId1234",
    },
    Object {
      "type": "email",
      "value": "tukifvus@domemci.li",
    },
  ],
  "timestamp": 1671371213652,
  "type": "tracking",
  "url": "K[uAM",
  "userAgent": "Mozilla/5.0 (iPhone; CPU iPhone OS 9_1 like Mac OS X) AppleWebKit/601.1.46 (KHTML, like Gecko) Version/9.0 Mobile/13B143 Safari/601.1",
  "values": Object {
    "anonymousId": "K[uAM",
    "data": "K[uAM",
    "email": "tukifvus@domemci.li",
    "kind": "K[uAM",
    "referrerUrl": "K[uAM",
    "timestamp": "2021-02-01T00:00:00.000Z",
    "url": "K[uAM",
    "userAgent": "K[uAM",
    "userId": "K[uAM",
  },
}
`;

exports[`Testing snapshot for 's submitTrackEvent destination action: required fields 1`] = `
Object {
  "data": "Test Event",
  "kind": "Track",
  "leadRefs": Array [
    Object {
      "type": "client-id",
      "value": "user1234",
    },
    Object {
      "type": "client-id",
      "value": "anonId1234",
    },
  ],
  "timestamp": 1671371213632,
  "type": "tracking",
  "url": "https://segment.com/academy/",
  "userAgent": "Mozilla/5.0 (iPhone; CPU iPhone OS 9_1 like Mac OS X) AppleWebKit/601.1.46 (KHTML, like Gecko) Version/9.0 Mobile/13B143 Safari/601.1",
  "values": Object {
    "data": "K[uAM",
    "kind": "K[uAM",
  },
}
`;
